<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eon_ip_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_ip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".70"
                    android:digits="0123456789."
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal|numberSigned|textPersonName"
                    android:text="@string/default_ip"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/button_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".30"
                    android:onClick="scanNetwork"
                    android:text="Scan" />
            </LinearLayout>

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="deleteButton"
                android:text="@string/delete_drives" />

            <Button
                android:id="@+id/button_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pullButton"
                android:text="@string/update_and_reboot" />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="settingsButton"
                android:text="@string/open_adroid_settings" />

            <Button
                android:id="@+id/button_clone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cloneButton"
                android:text="@string/git_clone" />

            <EditText
                android:id="@+id/edit_text_clone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/default_url"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkoutButton"
                android:text="@string/git_checkout" />

            <EditText
                android:id="@+id/edit_text_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/devel"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="customButton"
                android:text="@string/custom_command" />

            <EditText
                android:id="@+id/edit_text_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/default_custom"
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </LinearLayout>
    </ScrollView>